# mozart

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  Trunk.toml  build-wasm.sh  docker-compose.yml  index.html  nginx.conf  spec.md  style.css
crates/mozart-audio/: Cargo.toml
crates/mozart-audio/src/: engine.rs  error.rs  lib.rs  metronome.rs  sampler.rs
crates/mozart-core/: Cargo.toml
crates/mozart-core/src/: error.rs  lib.rs  midi.rs  note.rs  pitch.rs  scale.rs  song.rs  time.rs  transpose.rs  wasm.rs
crates/mozart-ui/: Cargo.toml
crates/mozart-ui/src/: app.rs  audio.rs  main.rs  playback.rs  tauri.rs
crates/mozart-ui/src/components/: accents.rs  header.rs  mod.rs  piano_roll.rs  settings.rs  text_input.rs  transport.rs  transpose.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/audio/: AudioEngine.ts  Metronome.ts  Sequencer.ts  index.ts
web/src/components/: AccentEditor.tsx  Header.tsx  PianoRoll.tsx  TextInput.tsx  Transport.tsx  TransposePanel.tsx  index.ts
web/src/store/: index.ts
web/src/wasm/: index.ts  types.ts
