[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/mozart-core",
    "crates/mozart-audio",
    "crates/mozart-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mozart Team"]
license = "MIT"

[workspace.dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Audio
cpal = "0.15"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
hound = "3.5"

# MIDI
midly = "0.5"

# Async
tokio = { version = "1.0", features = ["full"] }

# Testing
pretty_assertions = "1.4"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
