[workspace]
resolver = "2"
members = [
    "crates/mozart-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mozart Team"]
license = "MIT"

[workspace.dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# MIDI
midly = "0.5"

# WASM
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"

# Testing
pretty_assertions = "1.4"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
