[package]
name = "mozart"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Mozart - Melody transposition app"
default-run = "mozart"

[lib]
name = "mozart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mozart"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
mozart-core = { path = "../crates/mozart-core" }
# mozart-audio removed temporarily - thread-safety issues with rodio/cpal
tauri = { version = "2.2", features = [] }
tauri-plugin-shell = "2.0"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot = "0.12"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
