[package]
name = "mozart-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core music engine for Mozart - note representation, scales, transposition, and MIDI export"

[[bin]]
name = "mozart-test"
path = "src/bin/mozart-test.rs"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
midly.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
