[package]
name = "mozart-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core music engine for Mozart - note representation, scales, transposition, and MIDI export"

[[bin]]
name = "mozart-test"
path = "src/bin/mozart-test.rs"

[features]
default = []
wasm = ["wasm-bindgen", "console_error_panic_hook", "js-sys"]

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
midly.workspace = true

# WASM dependencies (optional)
wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
