[package]
name = "mozart-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Mozart UI - Leptos frontend for the Mozart app"

[[bin]]
name = "mozart-ui"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "KeyboardEvent",
    "DomRect",
    "CssStyleDeclaration",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
serde-wasm-bindgen = "0.6"
